test/sematest/invalid/InvalidMethodCalls2.java

class InvalidMethodCalls {

	
	public static void main(String[] args) {
		
		InvalidMethodCalls calls=new InvalidMethodCalls();
		calls.oneint(100,50);
	}
		
	public void oneint(int a)
	{
		
	}
	
}
